MDL-55638 core_message: fixed contacts overflow CSS setting

--- a/theme/bootstrapbase/style/moodle.css
+++ b/theme/bootstrapbase/style/moodle.css
@@ -5870,7 +5870,7 @@ a.ygtvspacer:hover {
 }
 .messaging-area-container .messaging-area .contacts-area .contacts {
   height: 500px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .messaging-area-container .messaging-area .contacts-area .contacts .contact {
   height: 66px;
